feat: acquire force option
