# internal/api/ctl/proto.gen.go
@@ -1,4 +1,4 @@
-// forester-controller v0.0.1 6ea9c5d5514e887a5c65c67e86d1b4b03a2e215d
+// forester-controller v0.0.1 22fdfbcfdeb69c82a67f0a5a7b9b352988cf60fb
 // --
 // Code generated by webrpc-gen@v0.14.0-dev with golang generator. DO NOT EDIT.
 //
@@ -30,7 +30,7 @@ func WebRPCSchemaVersion() string {
 
 // Schema hash generated from your RIDL schema
 func WebRPCSchemaHash() string {
-	return "6ea9c5d5514e887a5c65c67e86d1b4b03a2e215d"
+	return "22fdfbcfdeb69c82a67f0a5a7b9b352988cf60fb"
 }
 
 //
@@ -106,7 +106,7 @@ type SystemService interface {
 	Register(ctx context.Context, system *NewSystem) error
 	Find(ctx context.Context, pattern string) (*System, error)
 	Rename(ctx context.Context, pattern string, newName string) error
-	Acquire(ctx context.Context, systemPattern string, imagePattern string, comment string, snippets []string, customSnippet string) error
+	Acquire(ctx context.Context, systemPattern string, imagePattern string, comment string, snippets []string, customSnippet string, force bool) error
 	Release(ctx context.Context, systemPattern string) error
 	List(ctx context.Context, limit int64, offset int64) ([]*System, error)
 	BootNetwork(ctx context.Context, systemPattern string) error
@@ -924,6 +924,7 @@ func (s *systemServiceServer) serveAcquireJSON(ctx context.Context, w http.Respo
 		Arg2 string   `json:"comment"`
 		Arg3 []string `json:"snippets"`
 		Arg4 string   `json:"customSnippet"`
+		Arg5 bool     `json:"force"`
 	}{}
 	if err := json.Unmarshal(reqBody, &reqPayload); err != nil {
 		s.sendErrorJSON(w, r, ErrWebrpcBadRequest.WithCause(fmt.Errorf("failed to unmarshal request data: %w", err)))
@@ -931,7 +932,7 @@ func (s *systemServiceServer) serveAcquireJSON(ctx context.Context, w http.Respo
 	}
 
 	// Call service method implementation.
-	err = s.SystemService.Acquire(ctx, reqPayload.Arg0, reqPayload.Arg1, reqPayload.Arg2, reqPayload.Arg3, reqPayload.Arg4)
+	err = s.SystemService.Acquire(ctx, reqPayload.Arg0, reqPayload.Arg1, reqPayload.Arg2, reqPayload.Arg3, reqPayload.Arg4, reqPayload.Arg5)
 	if err != nil {
 		rpcErr, ok := err.(WebRPCError)
 		if !ok {
@@ -1684,14 +1685,15 @@ func (c *systemServiceClient) Rename(ctx context.Context, pattern string, newNam
 	return err
 }
 
-func (c *systemServiceClient) Acquire(ctx context.Context, systemPattern string, imagePattern string, comment string, snippets []string, customSnippet string) error {
+func (c *systemServiceClient) Acquire(ctx context.Context, systemPattern string, imagePattern string, comment string, snippets []string, customSnippet string, force bool) error {
 	in := struct {
 		Arg0 string   `json:"systemPattern"`
 		Arg1 string   `json:"imagePattern"`
 		Arg2 string   `json:"comment"`
 		Arg3 []string `json:"snippets"`
 		Arg4 string   `json:"customSnippet"`
-	}{systemPattern, imagePattern, comment, snippets, customSnippet}
+		Arg5 bool     `json:"force"`
+	}{systemPattern, imagePattern, comment, snippets, customSnippet, force}
 	err := doJSONRequest(ctx, c.client, c.urls[3], in, nil)
 	return err
 }
