# openapi.gen.yaml
@@ -1,12 +1,12 @@
-# forester-controller v0.0.1 6ea9c5d5514e887a5c65c67e86d1b4b03a2e215d
+# forester-controller v0.0.1 22fdfbcfdeb69c82a67f0a5a7b9b352988cf60fb
 # --
 # Code generated by webrpc-gen@v0.14.0-dev with github.com/webrpc/gen-openapi@v0.11.2 generator; DO NOT EDIT
-#
-# webrpc-gen -silent -schema=internal/api/ctl/controller.ridl -target=github.com/webrpc/gen-openapi@v0.11.2 -out=openapi.gen.yaml -title=Forester API -apiVersion=0.0.4 -serverUrl=https://forester.example.com:8000 -serverDescription=Forester service
+# 
+# webrpc-gen -silent -schema=internal/api/ctl/controller.ridl -target=github.com/webrpc/gen-openapi@v0.11.2 -out=openapi.gen.yaml -title=Forester API -apiVersion=0.0.5 -serverUrl=https://forester.example.com:8000 -serverDescription=Forester service
 openapi: 3.0.0
 info:
   title: 'Forester API'
-  version: '0.0.4'
+  version: '0.0.5'
 servers:
   - url: 'https://forester.example.com:8000'
     description: 'Forester service'
@@ -274,6 +274,7 @@ components:
         ApplianceID:
           type: number
         Appliance:
+          type: object
           $ref: '#/components/schemas/Appliance'
         UID:
           type: string
@@ -315,6 +316,7 @@ components:
       type: object
       properties:
         image:
+          type: object
           $ref: '#/components/schemas/Image'
     ImageService_GetByID_Request:
       type: object
@@ -349,11 +351,13 @@ components:
       type: object
       properties:
         image:
+          type: object
           $ref: '#/components/schemas/Image'
     ImageService_Find_Response:
       type: object
       properties:
         image:
+          type: object
           $ref: '#/components/schemas/Image'
     ImageService_List_Response:
       type: object
@@ -362,6 +366,7 @@ components:
           type: array
           description: '[]Image'
           items:
+            type: object
             $ref: '#/components/schemas/Image'
     ImageService_Delete_Response:
       type: object
@@ -404,6 +409,7 @@ components:
       type: object
       properties:
         appliance:
+          type: object
           $ref: '#/components/schemas/Appliance'
     ApplianceService_List_Response:
       type: object
@@ -412,6 +418,7 @@ components:
           type: array
           description: '[]Appliance'
           items:
+            type: object
             $ref: '#/components/schemas/Appliance'
     ApplianceService_Enlist_Response:
       type: object
@@ -421,6 +428,7 @@ components:
       type: object
       properties:
         system:
+          type: object
           $ref: '#/components/schemas/NewSystem'
     SystemService_Find_Request:
       type: object
@@ -450,6 +458,8 @@ components:
             type: string
         customSnippet:
           type: string
+        force:
+          type: boolean
     SystemService_Release_Request:
       type: object
       properties:
@@ -488,6 +498,7 @@ components:
       type: object
       properties:
         system:
+          type: object
           $ref: '#/components/schemas/System'
     SystemService_Rename_Response:
       type: object
@@ -502,6 +513,7 @@ components:
           type: array
           description: '[]System'
           items:
+            type: object
             $ref: '#/components/schemas/System'
     SystemService_BootNetwork_Response:
       type: object
@@ -519,6 +531,7 @@ components:
           type: array
           description: '[]LogEntry'
           items:
+            type: object
             $ref: '#/components/schemas/LogEntry'
     SnippetService_Create_Request:
       type: object
@@ -559,6 +572,7 @@ components:
       type: object
       properties:
         snippet:
+          type: object
           $ref: '#/components/schemas/Snippet'
     SnippetService_Edit_Response:
       type: object
@@ -569,6 +583,7 @@ components:
           type: array
           description: '[]Snippet'
           items:
+            type: object
             $ref: '#/components/schemas/Snippet'
     SnippetService_Delete_Response:
       type: object
